Fixed a caret color bug on Safari, Included a remover

--- a/css/style.css
+++ b/css/style.css
@@ -43,3 +43,8 @@ input:focus
 {
     outline: none;
 }
+input {
+    color: #FF2E88 !important;  /* change [input cursor color] by this*/
+    text-shadow: 0px 0px 0px white; /* change [input font] by this*/
+    -webkit-text-fill-color: transparent; /* make the text truly white*/
+}
